fix spacing for vrift mini journals

--- a/src/modules/better-journal/styles/mini-entries.css
+++ b/src/modules/better-journal/styles/mini-entries.css
@@ -86,3 +86,11 @@
   height: 45px;
   mix-blend-mode: multiply;
 }
+
+.journal .entry.rift_valour.minimalJournalImage.enter_tower .journaltext,
+.journal .entry.rift_valour.minimalJournalImage.no_loot_retreat .journaltext,
+.journal .entry.rift_valour.minimalJournalImage.upgrade_longstride .journaltext,
+.journal .entry.rift_valour.minimalJournalImage.upgrade_stamina .journaltext,
+.journal .entry.rift_valour.minimalJournalImage.upgrade_siphon .journaltext {
+  padding-top: 0;
+}
